<resources>
    <string name="app_name">Know Nothing</string>
    <string name="permission_decription">this is permission decription</string>
    <string name="search_title">search</string>
    <string name="pull_to_load_more">Pull up to load more</string>

    <string name="news_today">Today\'s news</string>
    <string name="date_es">%1$s, %2$s %3$d, %4$d</string><!--weekday, month monthDay, year-->
    <string name="weekday_0">Sun</string>
    <string name="weekday_1">Mon</string>
    <string name="weekday_2">Tue</string>
    <string name="weekday_3">Wed</string>
    <string name="weekday_4">Thu</string>
    <string name="weekday_5">Fri</string>
    <string name="weekday_6">Sat</string>
    <string name="month_1">Jan</string>
    <string name="month_2">Feb</string>
    <string name="month_3">Mar</string>
    <string name="month_4">Apr</string>
    <string name="month_5">May</string>
    <string name="month_6">Jun</string>
    <string name="month_7">Jul</string>
    <string name="month_8">Aug</string>
    <string name="month_9">Sep</string>
    <string name="month_10">Oct</string>
    <string name="month_11">Nov</string>
    <string name="month_12">Dec</string>

    <string name="page_title_1">page1</string>
    <string name="page_title_2">page2</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="no_network_available">No network available</string>
    <string name="no_network_available_and_not_download">No network available, no download</string>
    <string name="no_new_latest_news">No new news</string>
    <string name="no_news_to_show">No news to show</string>
    <string name="download_nothing">Can\'t download news</string>
    <string name="no_network_show_local_news">No network available, show downloaded news list</string>
    <string name="network_avaibale_to_restart_app">Network available now, please restart app to get latest news, if you want.</string>

    <string name="write_external_storage_explanation">I need this permission to save news, otherwise you may waste mobile data. Can I request the permission now?</string>
    <string name="no_write_external_storage_permission">OK</string>

    <string name="loading">loading...</string>

    <string name="toolbar_title_daily_news">Daily News</string>
    <string name="toolbar_news_content">News content</string>
    <string name="toolbar_menu_about">About</string>
    <string name="toolbar_menu_tools">Tools</string>

    <string name="about_1">This app simulates 知乎日报.</string>
    <string name="about_2">Not for business purpose.</string>
    <string name="about_3">Inform me if any infringement.</string>
    <string name="about_4">wanghlwu@gmail.com</string>
    <string name="about_5">Version: 1.2.1</string>

    <string name="tool_days">lived days</string>
    <string name="tool_draw">draw</string>

    <string name="lived_days_title">Chooce your birthday</string>
    <string name="lived_days_msg_today_is_birthday">HAPPY BIRTHDAY!!!!!!!!</string>
    <string name="lived_days_msg_1">You chose %1$s, it impossible!!</string>
    <string name="lived_days_msg_2">Oh, cuty baby, you\'ve just passed %1$d days~</string>
    <string name="lived_days_msg_3">Child, you\'ve just passed %1$d days.\nHave fun every day!</string>
    <string name="lived_days_msg_4">Young person, you\'ve passed %1$d days.\nGood good study, day day up!</string>
    <string name="lived_days_msg_5">You\'ve lived %1$d days. Best wished to you!</string>
    <string name="lived_days_msg_6">You\'ve lived %1$d days. Best wished to you!</string>
    <string name="lived_days_msg_7">You\'ve lived %1$d days.\nMy god, you\'re too special to have birthday every year</string>

    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

    <string name="search_dialog_title">Which day\'s news you wanna see?</string>
    <string name="search_wrong_date">You chose future time, I can\'t show!</string>
</resources>
